<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.fragment.WithdrawFragment">

    <TextView
        android:textSize="20sp"
        android:text="CUSTOMER DETAILS"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:paddingBottom="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <TextView
        android:text="Account No:"
        android:id="@+id/acc_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvAccNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@+id/acc_no"
        android:textSize="20sp"
        tools:text="Sample AccNo" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_below="@id/acc_no"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@+id/name"
        android:layout_below="@id/acc_no"
        android:textSize="20sp"
        tools:text="Sample Name" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:text="@string/address"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@+id/address"
        android:textSize="20sp"
        tools:text="Sample Address" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/address"
        android:text="@string/phone_no"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/address"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@+id/phone"
        android:textSize="20sp"
        tools:text="Sample Phone" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:text="@string/email"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@+id/email"
        android:textSize="20sp"
        tools:text="Sample Email" />

    <TextView
        android:id="@+id/account_bal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:text="@string/account_balance"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvAccountBal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@+id/account_bal"
        android:textSize="20sp"
        tools:text="Sample Bal" />

    <!--<TextView-->
        <!--android:id="@+id/open_date"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/account_bal"-->
        <!--android:text="@string/a_c_open_date"-->
        <!--android:textSize="20sp"-->
        <!--android:textStyle="bold" />-->

    <!--<TextView-->
        <!--android:id="@+id/tvOpenDate"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/account_bal"-->
        <!--android:layout_marginStart="12dp"-->
        <!--android:layout_toEndOf="@+id/open_date"-->
        <!--android:textSize="20sp"-->
        <!--tools:text="Sample A/c" />-->
    /RelativeLayout>
    </RelativeLayout>
</LinearLayout>